unpackaged/main/default/objects/FundingAwardRequirement/fields/Secondary_Staff_Email__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Staff_Email__c</fullName>
    <description>The Email address for the Secondary Staff assigned to this report.</description>
    <inlineHelpText>The Email address for the Secondary Staff assigned to this report.</inlineHelpText>
    <label>Secondary Staff Email</label>
    <type>Email</type>
</CustomField>