unpackaged/main/default/objects/FundingAwardRequirement/fields/Secondary_Staff_User__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Staff_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Secondary staff member for this Requirement. Set by automation when Secondary staff is set on the parent Request. Can be changed manually.</description>
    <inlineHelpText>Secondary staff member for this Requirement. Set by automation when Secondary staff is set on the parent Request. Can be changed manually.</inlineHelpText>
    <label>Secondary Staff</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Funding_Award_Requirements2</relationshipName>
    <type>Lookup</type>
</CustomField>