unpackaged/main/default/objects/FundingAwardRequirement/fields/Submitted_By__c.field-meta.xml
<CustomField>
    <fullName>Submitted_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Person Account lookup to Base MP to associate grantee report with Submitting User</inlineHelpText>
    <label>Submitted By</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Funding Award Requirement (Submitted By)</relationshipLabel>
    <relationshipName>Funding_Award_Requirements</relationshipName>
    <type>Lookup</type>
</CustomField>