unpackaged/main/default/objects/FundingAwardRequirement/fields/Title__c.field-meta.xml
<CustomField>
    <fullName>Title__c</fullName>
    <description>Title for the Report Contact (as it appears on their Contact record).</description>
    <formula>AssignedContact.Title</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Title for the Report Contact (as it appears on their Contact record).</inlineHelpText>
    <label>Title</label>
    <type>Text</type>
</CustomField>