unpackaged/main/default/objects/FundingAwardRequirement/fields/Waived_Comments__c.field-meta.xml
<CustomField>
    <fullName>Waived_Comments__c</fullName>
    <inlineHelpText>PO&#39;s: Please provide an explanation if you are requesting that a grant requirement be waived.</inlineHelpText>
    <label>Waived Comments</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>