unpackaged/main/default/objects/FundingAwardRequirement/fields/X5_Months_After_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>X5_Months_After_Due_Date__c</fullName>
    <description>Date 5 months (150 days) post report due date. Used for DAF report overdue email template.</description>
    <formula>DueDate + 150</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Date 5 months (150 days) post report due date. Used for DAF report overdue email template.</inlineHelpText>
    <label>5 Months After Due Date</label>
    <type>Date</type>
</CustomField>