unpackaged/main/default/objects/FundingAwardRequirement/recordTypes/Crisis_Narrative.recordType-meta.xml
<RecordType>
    <fullName>Crisis_Narrative</fullName>
    <active>true</active>
    <description>For tracking crisis narrative reports</description>
    <label>Crisis Narrative</label>
</RecordType>