unpackaged/main/default/objects/FundingAwardRequirement/recordTypes/Crisis_Narrative_with_PO_Comments.recordType-meta.xml
<RecordType>
    <fullName>Crisis_Narrative_with_PO_Comments</fullName>
    <active>true</active>
    <description>Crisis Narrative with PO Comments</description>
    <label>Crisis Narrative with PO Comments</label>
</RecordType>