unpackaged/main/default/objects/FundingAwardRequirement/recordTypes/DAF_Report.recordType-meta.xml
<RecordType>
    <fullName>DAF_Report</fullName>
    <active>true</active>
    <description>For tracking DAF final reports</description>
    <label>DAF Report</label>
</RecordType>