unpackaged/main/default/objects/FundingAwardRequirement/recordTypes/Financial_Report.recordType-meta.xml
<RecordType>
    <fullName>Financial_Report</fullName>
    <active>true</active>
    <description>For submission of financial report only</description>
    <label>Financial Report</label>
</RecordType>