unpackaged/main/default/objects/FundingAwardRequirement/recordTypes/Financial_Report_with_PO_Comments.recordType-meta.xml
<RecordType>
    <fullName>Financial_Report_with_PO_Comments</fullName>
    <active>true</active>
    <description>Financial Report with PO Comments</description>
    <label>Financial Report with PO Comments</label>
</RecordType>