unpackaged/main/default/objects/FundingAwardRequirement/recordTypes/GEF_Milestone.recordType-meta.xml
<RecordType>
    <fullName>GEF_Milestone</fullName>
    <active>true</active>
    <description>To track quarterly progress/milestones for DRL/GEF Sub-awards</description>
    <label>GEF Milestone</label>
</RecordType>