unpackaged/main/default/objects/FundingAwardRequirement/recordTypes/Grant_Agreement.recordType-meta.xml
<RecordType>
    <fullName>Grant_Agreement</fullName>
    <active>true</active>
    <description>This record type relates to the Grant Agreement requirement.</description>
    <label>Grant Agreement</label>
</RecordType>