unpackaged/main/default/objects/FundingAwardRequirement/recordTypes/Grant_Amendment.recordType-meta.xml
<RecordType>
    <fullName>Grant_Amendment</fullName>
    <active>true</active>
    <description>This record type relates to the Grant Amendment requirement.</description>
    <label>Grant Amendment</label>
</RecordType>