unpackaged/main/default/objects/FundingAwardRequirement/recordTypes/Interim_Narrative_Report.recordType-meta.xml
<RecordType>
    <fullName>Interim_Narrative_Report</fullName>
    <active>true</active>
    <description>For tracking interim narrative reports</description>
    <label>Interim Narrative Report</label>
</RecordType>