unpackaged/main/default/objects/FundingAwardRequirement/recordTypes/Interim_Narrative_Report_with_PO_Comments.recordType-meta.xml
<RecordType>
    <fullName>Interim_Narrative_Report_with_PO_Comments</fullName>
    <active>true</active>
    <description>Interim Narrative Report with PO Comments</description>
    <label>Interim Narrative Report with PO Comments</label>
</RecordType>