unpackaged/main/default/objects/FundingAwardRequirement/recordTypes/Narrative_Report.recordType-meta.xml
<RecordType>
    <fullName>Narrative_Report</fullName>
    <active>true</active>
    <description>Capture Narrative Grantee Reports</description>
    <label>Narrative Report</label>
</RecordType>