unpackaged/main/default/objects/FundingAwardRequirement/recordTypes/Narrative_Report_with_PO_Comments.recordType-meta.xml
<RecordType>
    <fullName>Narrative_Report_with_PO_Comments</fullName>
    <active>true</active>
    <description>Narrative Report with PO Comments</description>
    <label>Narrative Report with PO Comments</label>
</RecordType>