unpackaged/main/default/objects/FundingAwardRequirement/recordTypes/TOG_Narrative_Report.recordType-meta.xml
<RecordType>
    <fullName>TOG_Narrative_Report</fullName>
    <active>true</active>
    <description>For tracking Travel &amp; Opportunity Grant reports.</description>
    <label>TOG Narrative Report</label>
</RecordType>