unpackaged/main/default/objects/FundingAwardRequirement/recordTypes/TOG_Narrative_Report_with_PO_Comments.recordType-meta.xml
<RecordType>
    <fullName>TOG_Narrative_Report_with_PO_Comments</fullName>
    <active>true</active>
    <description>TOG Narrative Report with PO Comments</description>
    <label>TOG Narrative Report with PO Comments</label>
</RecordType>