unpackaged/main/default/objects/FundingAwardRequirement/validationRules/Require_Comments_when_Waive.validationRule-meta.xml
<ValidationRule>
    <fullName>Require_Comments_when_Waive</fullName>
    <active>false</active>
    <errorConditionFormula>ISPICKVAL(Status, &#39;Waived&#39;) &amp;&amp;
ISBLANK(Waived_Comments__c )</errorConditionFormula>
    <errorMessage>Please note why this report was waived.</errorMessage>
</ValidationRule>